--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "gulp-start",
+  "name": "gulp-new",
   "version": "1.0.0",
-  "description": "start gulp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,17 +8,19 @@
   "author": "Tati Sidorova",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.5",
-    "del": "^5.0.0",
+    "browser-sync": "^2.26.13",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2",
-    "normalize.css": "^8.0.1"
+    "gulp-imagemin": "^7.1.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.5.1"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
-  }
+  },
+  "description": ""
 }
